# vllm-docker-compose

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.override.yml  env.example  pyproject.toml
litellm/: .env.example  docker-compose.yml
qwen25-14b-instruct-1m/: docker-compose.yaml
ragflow/: docker-compose.yml
scripts/: health_check.py  monitoring_setup.md
vllm/qwen3-30b-a3b-instruct-2507/: docker-compose.yaml
xinference/: docker-compose.yml
